# CertifiableFactors

./: .gitignore  CMakeLists.txt  README.md
cpp/: CMakeLists.txt  CertifiablePGO.h  CertifiableProblemOpts.h  CertifiableRA.h  CertifiableResults.h  Certifiable_problem.h  LiftedPose.h  LiftedPosePriorFactor.cpp  LiftedPosePriorFactor.h  RaFactor.cpp  RaFactor.h  RelativePoseMeasurement.h  SEsyncFactor.cpp  SEsyncFactor.h  StiefelManifold-inl.h  StiefelManifold.h  StiefelManifoldPriorFactor.cpp  StiefelManifoldPriorFactor.h  UnitSphere.h  types.h  utils.cpp  utils.h
cpp/examples/: CMakeLists.txt  Certifiable_PGO_example.cpp  Certifiable_RA_example.cpp  RotationAveraging_example.cpp  SEsync_example.cpp
cpp/tests/: CMakeLists.txt  testLiftedPose.cpp  testRaFactor.cpp  testSEsyncFactor.cpp  testStiefelManifold.cpp
python/: grid3D.py  plotg2o.py
results/: CSAIL.csv  city10000.csv  test.csv  test.csv.g2o
results/CPGO/: cubicle.csv
results/batch/FullSLAM/2D/p3/: CSAILp3test.csv  MITp3test.csv  ais2klinikp3test.csv  city10000p3test.csv  intelp3test.csv  kitti_00p3test.csv  kitti_02p3test.csv  kitti_05p3test.csv  manhattanp3test.csv
results/batch/FullSLAM/2D/p5/: CSAILp5test.csv  MITp5test.csv  ais2klinikp5test.csv  ais2kliniktest.csv  city10000p5test.csv  intelp5test.csv  kitti_00p5test.csv  kitti_02p5test.csv  kitti_05p5test.csv  manhattanp5test.csv  test.csv
results/batch/FullSLAM/3D/p4/: cubiclep4test.csv  grid3Dp4test.csv  parkinggaragep4test.csv  rimp4test.csv  smallGrid3Dp4test.csv  sphere2500p4test.csv  sphere_bignoise_vertex3p4test.csv  tinyGrid3Dp4test.csv  torus3Dp4test.csv
results/batch/FullSLAM/3D/p6/: cubiclep6test.csv  grid3Dp6test.csv  parkinggaragep6test.csv  rimp6test.csv  smallGrid3Dp6test.csv  sphere2500p6test.csv  sphere_bignoise_vertex3p6test.csv  tinyGrid3Dp6test.csv  torus3Dp6test.csv
results/batch/RotationAveraging/2D/p4/: CSAILtestp4.csv  MITtestp4.csv  ais2kliniktestp4.csv  city10000testp4.csv  inteltestp4.csv  kitti_00testp4.csv  kitti_02testp4.csv  kitti_05testp4.csv  manhattantestp4.csv
results/batch/RotationAveraging/3D/p5/: cubicletestp5.csv  grid3Dtest.csv  parkinggaragetestp5.csv  rimtestp5.csv  smallGrid3Dtestp5.csv  sphere2500testp5.csv  sphere_bignoise_vertex3p5.csv  torus3Dtestp5.csv
scripts/: run_SEsync_example.sh
